feast/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: feast-ui-svc
  namespace: mlops-feast
spec:
  selector:
    app: feast-ui
  ports:
  - port: 8888
    targetPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: feast-feature-server-svc
  namespace: mlops-feast
spec:
  selector:
    app: feast-feature-server
  ports:
  - name: grpc
    port: 6566
    targetPort: 6566
