feast/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: feast-ui-ingress
  namespace: mlops-feast
spec:
  ingressClassName: nginx
  rules:
  - host: feast.yourdomain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: feast-ui-svc
            port:
              number: 8888
